# imgur2pdf

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
imgur2pdf/: __init__.py  imgur2pdf.py
upload2remarkable/: __init__.py  upload2remarkable.py  uploader.py
