[tool.poetry]
name = "imgur2pdf"
version = "0.2.0"
description = ""
authors = ["mrfyda <mrfyda@gmail.com>"]
packages = [
    { include = "imgur2pdf" },
    { include = "upload2remarkable" },
]

[tool.poetry.dependencies]
python = "^3.8"
imgurpython = "^1.1.7"
requests = "^2.24.0"
Pillow = ">=8.0.1,<11.0.0"
click = "^7.1.2"
rmapy = "^0.2.3"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.4"

[tool.poetry.scripts]
imgur2pdf = 'imgur2pdf:main'
upload2remarkable = 'upload2remarkable:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
